# cv-playground-gui

./: CMakeLists.txt  LICENSE.txt  README.md  editor.qrc
qml/: FilterEditor.qml  FilterImage.qml  main.qml
qml/Dialogs/: AboutDialog.qml  BaseDialog.qml  MagicDialog.qml  SettingsDialog.qml
qml/MainMenu/: Menu.qml  MenuItem.qml  MenuSeparator.qml  MenuSymbol.qml
qml/Themes/: Blue.qml  Dark.qml  Default.qml  Theme.qml  qmldir  theme.js
src/: document_handler.cpp  document_handler.hpp  file_io.cpp  file_io.hpp  filter_image_item.cpp  filter_image_item.hpp  main.cpp  syntax_highlighter.cpp  syntax_highlighter.hpp
